Leetcode 39 combinationsSum